Final commit before bucket